--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gray Background</title>
-  <style>
-    /* Apply a soft, beautiful gray background */
-    body {
-      background-color: #f2f2f2; /* Light, warm gray */
-      color: #333333; /* Dark gray for text contrast */
-      font-family: Arial, sans-serif; /* Optional font styling */
-      margin: 0;
-      padding: 0;
-    }
-  </style>
-</head>
-<body>
-  <h1>Welcome to My Website</h1>
-  <p>This is an example of a website with a beautiful gray background.</p>
-</body>
-</html>
+<div class="page">
+  <div class="video-bg">
+    <div id="videoPlayer" data-videoid="XaoigWHOtBM"></div>
+  </div>
+  <div class="content">
+    <h1>Video Player background</h1>
+    <h3>Full screen youtube video player in background.</h3>
+  </div>
+</div>
